testsuite/tests/checks/raise_builtin/test.out
src.adb:5:4: error: explicit raise of a predefined exception
5 |    raise Program_Error with "Message";
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

